fixed nabvar on mobile view

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,5 @@
 
    #header {
-       position: absolute;
        z-index: 10;
        width: 100%;
    }
@@ -17,7 +16,7 @@
        font-weight: bold;
        font-size: 1.5em;
        text-transform: uppercase;
-       color: #fff !important;
+       color: #000 !important;
    }
 
    .nav-item {
@@ -92,6 +91,17 @@
 
 .navbar {
     padding: 30px 60px;
+}
+
+#header {
+    position: absolute;
+}
+
+.navbar-brand {
+    font-weight: bold;
+    font-size: 1.5em;
+    text-transform: uppercase;
+    color: #fff !important;
 }
 }
 @media (min-width: 720px) { 
